--- a/FileWave_Client/filewave_client_log_file/README
+++ b/FileWave_Client/filewave_client_log_file/README
@@ -1,1 +1,1 @@
-
+The "error_messages_in_filewave_client_log_file" folder contains various custom fields that can be used within FileWave to detect if a macOS client has a specific error message that needs to be monitored.
