--- a/FileWave_Admin_Scripts/README
+++ b/FileWave_Admin_Scripts/README
@@ -2,17 +2,17 @@ The name of the FileWave console is FileWave Admin, which identifies clients, so
  
 There are seven different types of scripts that can be used in a FileWave fileset:
 
-Requirements Scripts – A requirements script checks the requirement on the Fileset before any dependencies are downloaded. If any requirement script fails (return non-zero), then the Fileset and its dependencies will not be downloaded nor installed.
+**Requirements Scripts** – A requirements script checks the requirement on the Fileset before any dependencies are downloaded. If any requirement script fails (return non-zero), then the Fileset and its dependencies will not be downloaded nor installed.
 
-Preflight Scripts – A preflight script checks the needs of the Fileset before the Fileset downloads, but after dependencies have been installed. If any preflight script fails (returns non-zero), then the Fileset won't be downloaded or installed.
+**Preflight Scripts** – A preflight script checks the needs of the Fileset before the Fileset downloads, but after dependencies have been installed. If any preflight script fails (returns non-zero), then the Fileset won't be downloaded or installed.
 
-Activation Scripts – An activation script is executed upon activation of the Fileset.
+**Activation Scripts** – An activation script is executed upon activation of the Fileset.
 
-Postflight Scripts – A postflight script is executed after the installation of the Fileset has completed.
+**Postflight Scripts** – A postflight script is executed after the installation of the Fileset has completed.
 
-Verification Scripts – A verification script is executed after postflight scripts and upon every "verification of the Fileset."
+**Verification Scripts** – A verification script is executed after postflight scripts and upon every "verification of the Fileset."
 
-Pre-Uninstallation Scripts – A pre-uninstallation script is executed on inactivation of a Fileset and right before a Fileset is uninstalled.
+**Pre-Uninstallation Scripts** – A pre-uninstallation script is executed on inactivation of a Fileset and right before a Fileset is uninstalled.
 
-Post-Uninstallation Scripts – A post-uninstallation script is executed right after uninstalling/removing the Fileset from a client and its dependencies.
+**Post-Uninstallation Scripts** – A post-uninstallation script is executed right after uninstalling/removing the Fileset from a client and its dependencies.
 
