--- a/FileWave_Admin_Scripts/README
+++ b/FileWave_Admin_Scripts/README
@@ -2,7 +2,7 @@ The name of the FileWave console is FileWave Admin, which identifies clients, so
  
 There are seven different types of scripts that can be used in a FileWave fileset:
 
-<ins>Requirements Scripts</ins> – A requirements script checks the requirement on the Fileset before any dependencies are downloaded. If any requirement script fails (return non-zero), then the Fileset and its dependencies will not be downloaded nor installed.
+<u>Requirements Scripts</u> – A requirements script checks the requirement on the Fileset before any dependencies are downloaded. If any requirement script fails (return non-zero), then the Fileset and its dependencies will not be downloaded nor installed.
 
 <ins>Preflight Scripts</ins> – A preflight script checks the needs of the Fileset before the Fileset downloads, but after dependencies have been installed. If any preflight script fails (returns non-zero), then the Fileset won't be downloaded or installed.
 
